; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnve0.c_nve0_graph_generate_unk40xx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnve0.c_nve0_graph_generate_unk40xx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvc0_graph_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvc0_graph_priv*)* @nve0_graph_generate_unk40xx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nve0_graph_generate_unk40xx(%struct.nvc0_graph_priv* %0) #0 {
  %2 = alloca %struct.nvc0_graph_priv*, align 8
  store %struct.nvc0_graph_priv* %0, %struct.nvc0_graph_priv** %2, align 8
  %3 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %4 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %3, i32 4210704, i32 0)
  %5 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %6 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %5, i32 4210708, i32 0)
  %7 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %8 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %7, i32 4210712, i32 0)
  %9 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %10 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %9, i32 4210716, i32 0)
  %11 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %12 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %11, i32 4210720, i32 0)
  %13 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %14 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %13, i32 4210724, i32 57344)
  %15 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %16 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %15, i32 4210728, i32 0)
  %17 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %18 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %17, i32 4210856, i32 0)
  %19 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %20 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %19, i32 4210860, i32 0)
  %21 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %22 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %21, i32 4210864, i32 0)
  %23 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %24 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %23, i32 4210868, i32 0)
  %25 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %26 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %25, i32 4210872, i32 0)
  %27 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %28 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %27, i32 4210876, i32 0)
  %29 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %30 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %29, i32 4210880, i32 0)
  %31 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %32 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %31, i32 4210884, i32 0)
  %33 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %34 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %33, i32 4210888, i32 -134217585)
  %35 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %36 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %35, i32 4210896, i32 0)
  %37 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %38 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %37, i32 4210900, i32 0)
  %39 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %40 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %39, i32 4210904, i32 0)
  %41 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %42 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %41, i32 4210908, i32 0)
  %43 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %44 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %43, i32 4210912, i32 0)
  %45 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %46 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %45, i32 4210916, i32 0)
  %47 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %48 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %47, i32 4210920, i32 4096)
  %49 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %50 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %49, i32 4210936, i32 0)
  %51 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %52 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %51, i32 4210992, i32 0)
  %53 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %54 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %53, i32 4210996, i32 0)
  %55 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %56 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %55, i32 4211000, i32 536870976)
  %57 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %58 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %57, i32 4211024, i32 46)
  %59 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %60 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %59, i32 4211028, i32 1024)
  %61 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %62 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %61, i32 4211032, i32 512)
  %63 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %64 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %63, i32 4211044, i32 85)
  %65 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %66 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %65, i32 4211104, i32 0)
  %67 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %68 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %67, i32 4211108, i32 0)
  %69 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %70 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %69, i32 4211112, i32 0)
  %71 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %72 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %71, i32 4211116, i32 0)
  %73 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %74 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %73, i32 4211200, i32 0)
  %75 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %76 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %75, i32 4211204, i32 0)
  %77 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %78 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %77, i32 4211208, i32 0)
  %79 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %80 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %79, i32 4211212, i32 0)
  ret void
}

declare dso_local i32 @nv_wr32(%struct.nvc0_graph_priv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
